header and footer changes

--- a/img/desktop.ini
+++ b/img/desktop.ini
@@ -7,3 +7,5 @@ Screenshot 2024-05-09 122927.png=@Screenshot 2024-05-09 122927,0
 Screenshot 2024-05-09 123401.png=@Screenshot 2024-05-09 123401,0
 Screenshot 2024-05-09 125034.png=@Screenshot 2024-05-09 125034,0
 Screenshot 2024-05-09 163443.png=@Screenshot 2024-05-09 163443,0
+Screenshot 2024-06-13 120816.png=@Screenshot 2024-06-13 120816,0
+Screenshot 2024-06-13 120856.png=@Screenshot 2024-06-13 120856,0
